# portainer-mcp

./: .dockerignore  .gitignore  .zizmor.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security-scan.yml
src/: client.rs  lib.rs  main.rs  models.rs  redact.rs  server.rs
tests/: integration.rs  smoke.rs
tests/common/: mod.rs
