[package]
name = "portainer-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for managing Docker Compose stacks on Portainer"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "portainer", "portainer-ce", "portainer-be"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
