[package]
name = "portainer-stacks"
version = "0.4.1"
edition = "2024"
description = "MCP server for managing Docker Compose stacks on Portainer"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "portainer", "portainer-ce", "portainer-be"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "1.4", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
testcontainers = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
